more aggressive jvm options for slaves